--- a/index.html
+++ b/index.html
@@ -2,4 +2,5 @@
   <head>
     <h1>youtube clips from me</h1>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/oavSiNIUJO0?si=Wa6wEbkZOhtDTlqu&amp;clip=UgkxRjZT1POfVVSoSmYzEtJlS-cC_hhDxAe7&amp;clipt=EAsYk4cB" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <h1>DISCLAIMER!!! I DID NOT MAKE ANY VIDEOS ON THIS PAGE!!!</h1>
 </html>
